// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BMenuIcon applies custom props 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-bsqp9w-MuiSvgIcon-root"
  data-testid="MenuIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
  />
</svg>
`;

exports[`BMenuIcon renders without errors 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
  data-testid="MenuIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
  />
</svg>
`;
